НЕ работает контроллер

--- a/NailRestApi/appsettings.json
+++ b/NailRestApi/appsettings.json
@@ -3,10 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=DESKTOP-PPHCELV\\SQL;Database=NailsApp;Trusted_Connection=True;TrustServerCertificate=True;"
     }
+
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-PPHCELV\\SQL;Database=NailsApp;Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
