РАБОТАЕТ БЛЯДСКОЕ ГОВНО ЕБАНОЕ ВСЕ НЕРВЫ МОИ УБИЛО БЛЯТЬ СУКА НАХУЙ

--- a/NailRestApi/appsettings.json
+++ b/NailRestApi/appsettings.json
@@ -7,7 +7,7 @@
 
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PPHCELV\\SQL;Database=NailsApp;Trusted_Connection=True; TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-PPHCELV\\MSSQLSERVER01;Database=NailApp;Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
