--- a/NailRestApi/App.config
+++ b/NailRestApi/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="NailsAppEntities" connectionString="metadata=res://*/Base.Model1.csdl|res://*/Base.Model1.ssdl|res://*/Base.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PPHCELV\SQLEXPRESS;initial catalog=NailsApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="NailAppEntities" connectionString="metadata=res://*/Basse.Model1.csdl|res://*/Basse.Model1.ssdl|res://*/Basse.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PPHCELV\MSSQLSERVER01;initial catalog=NailApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
