--- a/NailRestApi/appsettings.json
+++ b/NailRestApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PPHCELV\\MSSQLSERVER01;Database=NailApp;Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=194.67.111.16;Database=NailApp;User Id=sa;Password=Password123!;TrustServerCertificate=true"
   }
 }
